// Licensed Materials - Property of IBM
// (c) Copyright IBM Corporation 2018. All Rights Reserved.
// Note to U.S. Government Users Restricted Rights:
// Use, duplication or disclosure restricted by GSA ADP Schedule
// Contract with IBM Corp.

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package github.com.open_cluster_management.multicloud_operators_foundation.pkg.apis.mcm.v1beta2;

import "k8s.io/api/core/v1/generated.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1beta2";

// Work is the work that will be done on a set of cluster
message Work {
  // Standard object's metadata.
  // More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#metadata
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Spec defines the behavior of the work.
  // +optional
  optional WorkSpec spec = 2;

  // Result describes the result of a work
  // +optional
  optional WorkStatus status = 3;
}

// WorkList is a list of all the works
message WorkList {
  // Standard list metadata.
  // More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // List of Cluster objects.
  repeated Work items = 2;
}

// WorkSpec defines the work to be processes on a set of clusters
message WorkSpec {
  // Cluster is a selector of cluster
  optional k8s.io.api.core.v1.LocalObjectReference cluster = 1;

  // Type defins the type of the woke to be done
  optional string type = 2;
}

// WorkStatus returns the status of the work
message WorkStatus {
  // Reason is the reason of the current status
  optional string reason = 1;
}

